@@ -5,4 +5,4 @@ LABEL org.opencontainers.image.source=https://github.com/${GITHUB_REPO}
 
 COPY target/movie-server-1.0.0.jar /server.jar
 
-ENTRYPOINT ["java", "--enable-preview", "-jar", "server.jar"]
+ENTRYPOINT ["java", "-jar", "server.jar"]
